update the 404 site

--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         document.getElementById("copy-ip-btn").addEventListener("click", function () {
             const serverIP = "blockattack.fun";
             navigator.clipboard.writeText(serverIP).then(function () {
-                alert("Server IP wurde kopiert!\nDer Port für Bedrock ist 25515\nViel Spaß 😃🥰");
+                alert("Server IP wurde kopiert!\nDer Port für Bedrock ist 25515\nViel Spaß 😃");
             }).catch(function (err) {
                 console.error("Fehler beim Kopieren der IP: ", err);
             });
@@ -83,7 +83,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <section id="about">
         <h2>404 - Nicht Gefunden</h2>
         <p>Die von dir angegebene Webseite wurde nicht gefunden. Prüfe die Schreibweise der URL oder versuch es später
-            nochmal. Wenn du auf etwas geklickt hast und diese Seite erscheint, kontaktiere: theerrorexe@gmail.com oder
+            nochmal. Wenn du auf etwas geklickt hast und diese Seite erscheint, kontaktiere: theerrorexe@proton.me oder
             auf Discord: theerrorexe</p>
     </section>
 
